--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Taylor Moore",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.16.1",
     "bluebird": "^3.3.4",
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
@@ -25,7 +26,8 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.1",
     "react-router-redux": "^4.0.7",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
