--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "body-parser": "^1.16.0",
     "express": "^4.14.0",
     "express-cors": "0.0.3",
+    "history": "^4.6.1",
     "pg-promise": "^3.2.3",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "react-router": "^3.0.1",
+    "react-router": "^3.0.5",
     "react-router-redux": "^4.0.7",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
