--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "enzyme": "^2.8.2",
     "express": "^4.14.0",
     "express-cors": "0.0.3",
+    "history": "^4.6.1",
     "jest": "^20.0.3",
     "pg-promise": "^3.2.3",
     "react": "^15.4.2",
