--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "author": "Taylor Moore",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.4.0",
     "bluebird": "^3.3.4",
     "body-parser": "^1.16.0",
     "css-loader": "^0.28.1",
     "enzyme": "^2.8.2",
     "express": "^4.14.0",
     "express-cors": "0.0.3",
+    "fetch-mock": "^5.10.1",
     "history": "^4.6.1",
     "jest": "^20.0.3",
     "pg-promise": "^3.2.3",
@@ -33,17 +35,21 @@
     "react-router": "^3.0.1",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-mock-store": "^1.2.3",
     "redux-promise": "^0.5.3",
     "style-loader": "^0.17.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
-    "babel-jest": "^20.0.1",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^6.2.10",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.18.0",
-    "jest": "^20.0.1",
     "css-loader": "^0.28.1",
+    "enzyme": "^2.8.2",
+    "jest": "^20.0.3",
+    "react-addons-test-utils": "^15.5.1",
     "react-hot-loader": "^1.3.1",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "^5.0.0-alpha.6",
