--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "author": "Taylor Moore",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "bluebird": "^3.3.4",
     "body-parser": "^1.16.0",
     "css-loader": "^0.28.1",
     "enzyme": "^2.8.2",
     "express": "^4.14.0",
     "express-cors": "0.0.3",
+    "fetch-mock": "^5.10.1",
     "history": "^4.6.1",
     "jest": "^20.0.3",
     "pg-promise": "^3.2.3",
@@ -33,6 +35,7 @@
     "react-router": "^3.0.1",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
+    "redux-mock-store": "^1.2.3",
     "redux-promise": "^0.5.3",
     "style-loader": "^0.17.0"
   },
